Extend PG Targeting to match single String or Integer value (#1653)